apple-pod-svc.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: appleapppod
  labels: 
    app: appleapp
spec:
  containers:
    - name: appleappcontainer
      images: javeed/apple_app
      ports:
        - containerPort: 8080
...
