luminous_app.yml
---
apiVersion: v1
kind: Pod
matadata: 
  name: luminouspod
  labels:
    app: luminousapp
spec:
  containers:
   - name: luminousappcontainer
     image: javeedit/luminous_app
     ports:
      - containerPort: 8080
...
