python_flask_Blue.yml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: pythonflaskdeployment
spec:
  replicas: 5
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: pythonflask
      version: v1
  template:
    metadata: 
      name: pythonflaskpod
      labels: 
        app: pythonflask
        version: v1
        color: blue
    spec:
      containers:
        - name: pythonflaskcontainer
          image: javeedit/python_flask_app
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
...
