Kotak_svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kotakbanksvc
spec:
  type: NodePort
  selector: 
    app: kotakbankapp
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30022
...
