apple_rc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: appleappsvc
spec:
  type: NodePort
  selector: 
    app: appleapp
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30009
...
