contact-backend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: contactbackenddeployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: contactbackend
  template:
    metadata: 
      name: contactbackendpod
      labels:
        app: contactbackend
    spec:
      - containers:
          name: contactbackendcontainer
          image: javeedit/contactbackend
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: contactbackendsvc
spec:
  type: LoadBalancer
  selector:
    app: contactbackend
  ports:
    - port: 80
      targetPort: 8080
...
