ebay_rc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ebayappsvc
spec:
  type: NodePort
  selector:
    app: ebayapp
  ports: 
    - port: 80
      targetPort: 8080
      nodePort: 30006
...
