java-app.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: javawebapppod
  labels:
    app: javawebapp
spec:
  containers: 
  - name: javawebappcotainer
    image: ashokit/javawebapp
    ports:
      - containerPort: 8080
...
---
apiVersion: v1
kind: Service
metadata:
  name: javawebappsvc
spec:
  type: NodePort
  selector:
    app: javawebapp
  ports:
   -  port: 80
      targetPort: 8080
      nodePort: 30004
...
