kotak-app-prod.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kotakappsvc
spec:
  type: NodePort
  selector:
    app: kotakapp
    version: v1
    color: blue
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30003
...
