kotak_pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: kotakbankpod
  labels:
    app: kotakbankapp
spec:
  containers:
   -  name: kotakbankcontainer
      image: javeedit/kotak_bank_app
      ports:
       -  containerPort: 8080
...
---
apiVersion: v1
kind: Service
metadata: 
  name: kotakbanksvc
spec:
  type: NodePort
  selector:
    app: kotakbankapp
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30005
...
