kotak_rc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kotakappsvc
spec:
  type: NodePort
  selector:
    app: kotakapp
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30002
...
