luminous-app-preprod.yml
---
apiVersion: v1
kind: Service
metadata:
  name: luminousappsvc
spec:
  type: NodePort
  selector:
    app: luminousapp
    version: v2
    color: green
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30004
...
