luminous_rc.yml
---
apiVersion: v1
kind: Service
metadata: 
  name: luminousapp
spec:
  type: NodePort
  selector:
    app: luminousapp 
  ports:
    - port: 80
      targetPort: 8080
...
