pnb_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: pnbappdeployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: pnbapp
  template:
    metadata: 
      name: pnbapppod
      labels:
        app: pnbapp
    spec: 
      containers: 
        - name: pnbappcontainer
          image: javeedit/pnb_bank_app
          ports: 
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata: 
  name: pnbappsvc
spec:
  type: NodePort
  selector: 
      app: pnbapp
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 32000
...
