pnb_rc.yml
---
apiVersion: v1
kind: Service
metadata: 
  name: pnbappsvc
spec: 
  type: NodePort
  selector:
    app: pnbapp
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30006
...
