python_flask_svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pythonflasksvc
spec:
  type: NodePort
  selector:
      app: pythonflask
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30010
...
