rc.yml
---
apiVersion: v1
kind: Service
metadata: 
  name: javaappsvc
spec: 
  type: NodePort
  selector:
    app: javaapp
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30005
...
