sample-pod-svc.yml
---
apiVersion: v1
kind: Pod
metadata: 
  name: springbootpod
  labels:
    app: springbootapp
spec:
  containers:
    - name: springbootcontainer
      image: javeedit/sb-app
      ports: 
        - containerPort: 8080
...
---
apiVersion: v1
kind: Service
metadata: 
  name: springbootsvc
spec:
  type: NodePort
  selector:
    app: springbootapp
  ports:
    - port: 80
      targetPort: 8080
...
