samsung_app.yml
---
apiVersion: v1
kind: Service
metadata:
  name: samsungappsvc
spec:
  type: NodePort
  selector: 
    app: samsungapp
  ports: 
    - port: 80
      targetPort: 8080
      nodePort: 30035
...
